# cancer-autoresearch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  UBIQUITOUS_LANGUAGE.md  eval_finetuned.py  prepare_finetune_data.py  pyproject.toml
docs/: BIOMARKER_CATALOG.md  CNAME  capabilities.html  clinical_signoff_workflow.md  critical_explanations.json  disease_coverage.json  diseases.html  examples.json  gallery.html  index.html  limitations.html  openonco-engine-index.json  questionnaires.json  specs.html  style.css  sw.js  try.html
examples/: auto_aitl.json  auto_alcl.json  auto_aml.json  auto_apl.json  auto_atll.json  auto_b_all.json  auto_breast.json  auto_burkitt.json  auto_cervical.json  auto_chl.json  auto_cll.json  auto_cml.json  auto_crc.json  auto_dlbcl_nos.json  auto_eatl.json  auto_endometrial.json  auto_esophageal.json  auto_et.json  auto_fl.json  auto_gastric.json  auto_gbm.json  auto_gist.json  auto_glioma_low_grade.json  auto_hcc.json  auto_hcl.json  auto_hcv_mzl.json  auto_hgbl_dh.json  auto_hnscc.json  auto_hstcl.json  auto_mastocytosis.json  auto_mcl.json  auto_mds_hr.json  auto_mds_lr.json  auto_melanoma.json  auto_mf_sezary.json  auto_mm.json  auto_mtc.json  auto_nk_t_nasal.json  auto_nlpbl.json  auto_nodal_mzl.json  (+496 more)
finetune_data/: test_chatml.jsonl  val_chatml.jsonl
infograph/: mdt_with_ai_layer_light_theme.html
knowledge_base/: __init__.py
legacy/: README.md
scripts/: _close_signoffs.py  _csd7a_restructure.py  _gen_bma_drivers.py  _generate_oncokb_fixtures.py  _migrate_mdt_skills.py  _pkg2_notes.py  _pkg2_verify.py  _pkg3_normalize.py  audit_biomarkers.py  audit_executors.py  audit_tcell_nk_ptld.py  audit_unresolved_sources.py  audit_writers.py  build_csd_1_demo.py  build_csd_3_patient_demo.py  build_lung_kb.py  (+27 more)
(+5307 files in other folders)
